--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -47,5 +47,308 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  grid-template-areas: "result content__details";
+  place-content: center;
+  align-items: end;
+  column-gap: 30px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  grid-area: result;
+  justify-content: center;
+  align-items: center;
+}
+
+.content__details {
+  grid-area: content__details;
+  width: 100%;
+  height: 100%;
+}
+
+.search-form {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: 40px;
+}
+
+.content__list-container {
+  position: relative;
+  height: 298px;
+  overflow-y: auto;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.content__list > li:last-child {
+  margin-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+  min-inline-size: 194px;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+.search-form__fieldset-title {
+  margin-bottom: 5px;
+  font-family: "Fira Sans Condensed", "Arial", "Helvetica", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+}
+
+.title {
+  margin-bottom: 20px; /* ❌ ❌ ❌ у меня 20, а по макету 26 */
+  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  font-style: normal;
+  line-height: 0.94;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  font-style: normal;
+  line-height: 0.94;
+  text-transform: uppercase;
+}
+
+.content__card-link {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
+.content__video-card-title {
+  overflow: hidden;
+  font-family: "Oswald", "Arial", "Helvetica", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  font-style: normal;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.content__video-card-description {
+  overflow: hidden;
+  font-family: "Fira Sans Condensed", "Arial", "Helvetica", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 0.9;
+  line-clamp: 3;
+}
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  column-gap: 15px;
+}
+
+.search-form__fieldset {
+  width: 212px;
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  width: 225px;
+  height: 27px;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding-left: 0;
+  outline: none;
+  color: #fff;
+  font-family: "Fira Sans Condensed", "Arial", "Helvetica", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  background-color: transparent;
+  cursor: pointer;
+  appearance: none;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  /* состояние :active не работает ❌ ❌ ❌ */
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  width: 19px;
+  height: 19px;
+  opacity: 0;
+  background-color: white;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+  background-color: #fff;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline solid #fff;
+  text-underline-offset: 4px;
+}
+
+.button {
+  border: 1px solid #fff;
+  padding-top: 3px;
+  color: #fff;
+  font-family: "Fira Sans Condensed", "Arial", "Helvetica", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  font-style: normal;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  align-self: end;
+  width: 194px;
+  height: 34px;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  text-decoration: underline solid #fff;
+  text-underline-offset: 4px;
+}
+
+.button:active {
+  text-decoration: none;
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__video-card:focus {
+  outline: none;
+}
+
+.content__video-card:hover {
+  text-decoration: underline solid #fff;
+}
+
+.content__video-card:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus-visible {
+  outline: none;
+  outline: 1px solid #fff;
+}
+
+.result__video:focus-visible {
+  outline: none;
+  outline: 1px solid #fff;
+}
+
+.controls {
+  cursor: pointer;
+}
+
+.content__list-item {
+  padding: 0 3px;
+}
+
+.search-form__checkbox {
+  height: 27px;
 }
